clusters/my-cluster/oauth2-proxy/oauth2-proxy-browser-headers-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: preserve-oauth2-proxy-browser-uri
  namespace: authentik
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Uri: /oidc
