clusters/my-cluster/oauth2-proxy/oauth2-proxy-browser-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-oauth2-proxy-browser
  namespace: authentik
spec:
  stripPrefix:
    prefixes:
      - /oidc
