clusters/my-cluster/oauth2-proxy/oidc-example-localhost-headers-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: preserve-localhost-oidc-uri
  namespace: authentik
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Uri: /oidc
