clusters/my-cluster/oauth2-proxy/oauth2-proxy-browser-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth2-proxy-browser
  namespace: authentik
spec:
  replicas: 0
  selector:
    matchLabels:
      app: oauth2-proxy-browser
  template:
    metadata:
      labels:
        app: oauth2-proxy-browser
    spec:
      containers:
        - name: oauth2-proxy
          image: quay.io/oauth2-proxy/oauth2-proxy:v7.12.0
          imagePullPolicy: IfNotPresent
          args:
            - --http-address=0.0.0.0:4180
            - --proxy-prefix=/oauth2
            - --provider=oidc
            - --oidc-issuer-url=http://authentik-server.authentik.svc.cluster.local/authentik/
            - --skip-oidc-discovery=true
            - --redeem-url=http://authentik-server.authentik.svc.cluster.local/authentik/application/o/token/
            - --oidc-jwks-url=http://authentik-server.authentik.svc.cluster.local/authentik/application/o/oauth2-proxy-browser/jwks/
            - --profile-url=http://authentik-server.authentik.svc.cluster.local/authentik/application/o/userinfo/
            - --reverse-proxy=true
            - --email-domain=*
            - --upstream=static://202
            - --cookie-secure=false
            - --cookie-refresh=1h
            - --scope=openid profile email
            - --skip-provider-button=true
            - --insecure-oidc-allow-unverified-email=true
            - --pass-access-token=true
            - --pass-authorization-header=true
            - --pass-user-headers=true
            - --set-xauthrequest=true
            - --set-authorization-header=true
          ports:
            - name: http
              containerPort: 4180
          readinessProbe:
            httpGet:
              path: /ping
              port: http
          livenessProbe:
            httpGet:
              path: /ping
              port: http
          resources:
            requests:
              cpu: 25m
              memory: 64Mi
            limits:
              memory: 128Mi
