clusters/my-cluster/oauth2-proxy/oauth2-proxy-browser-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oauth2-proxy-browser
  namespace: authentik
spec:
  selector:
    app: oauth2-proxy-browser
  ports:
    - name: http
      port: 80
      targetPort: http
