clusters/my-cluster/oauth2-proxy/oidc-example-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oidc-example
  namespace: authentik
spec:
  selector:
    app: oidc-example
  ports:
    - name: http
      port: 80
      targetPort: http
