clusters/my-cluster/oauth2-proxy/oauth2-proxy-browser-oauth2-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oauth2-proxy-browser-oauth2
  namespace: authentik
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - master161.yuanwuzhi.io
      secretName: master161-yuanwuzhi-io-tls
  rules:
    - host: localhost
      http:
        paths:
          - path: /oauth2
            pathType: Prefix
            backend:
              service:
                name: oauth2-proxy-browser
                port:
                  number: 80
